--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 services:
   ubuntu-dev:
+    tty: true
+    stdin_open: true
     build:
       context: .
       dockerfile: Dockerfile
